; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_dmtimer.c_omap_dm_timer_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-omap/extr_dmtimer.c_omap_dm_timer_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omap_dm_timer = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @omap_dm_timer_free(%struct.omap_dm_timer* %0) #0 {
  %2 = alloca %struct.omap_dm_timer*, align 8
  store %struct.omap_dm_timer* %0, %struct.omap_dm_timer** %2, align 8
  %3 = load %struct.omap_dm_timer*, %struct.omap_dm_timer** %2, align 8
  %4 = call i32 @omap_dm_timer_enable(%struct.omap_dm_timer* %3)
  %5 = load %struct.omap_dm_timer*, %struct.omap_dm_timer** %2, align 8
  %6 = call i32 @omap_dm_timer_reset(%struct.omap_dm_timer* %5)
  %7 = load %struct.omap_dm_timer*, %struct.omap_dm_timer** %2, align 8
  %8 = call i32 @omap_dm_timer_disable(%struct.omap_dm_timer* %7)
  %9 = load %struct.omap_dm_timer*, %struct.omap_dm_timer** %2, align 8
  %10 = getelementptr inbounds %struct.omap_dm_timer, %struct.omap_dm_timer* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  %15 = call i32 @WARN_ON(i32 %14)
  %16 = load %struct.omap_dm_timer*, %struct.omap_dm_timer** %2, align 8
  %17 = getelementptr inbounds %struct.omap_dm_timer, %struct.omap_dm_timer* %16, i32 0, i32 0
  store i64 0, i64* %17, align 8
  ret void
}

declare dso_local i32 @omap_dm_timer_enable(%struct.omap_dm_timer*) #1

declare dso_local i32 @omap_dm_timer_reset(%struct.omap_dm_timer*) #1

declare dso_local i32 @omap_dm_timer_disable(%struct.omap_dm_timer*) #1

declare dso_local i32 @WARN_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
